@@ -1,5 +1,11 @@
 =========
-Version 1
+Version 2 (unreleased)
+=========
+
+ - Build and run against libwebsockets 1.3
+
+=========
+Version 1 (2014-07-05)
 =========
 
 Initial release.
